--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+      #pyramid {
+        font-family: "Courier New", monospace;
+        line-height: 0;
+      }
+    </style>
+  </head>
+
 <body>
 
 <h1>Pyramid Slide</h1>
@@ -17,5 +26,17 @@ How high?
   <input type="range" id="a" name="a" min="0" max="20">
   <output name="x" for="a"></output>
 </form>
+
+<div font-family = "Courier New", monospace;>
+        <div id="pyramid">
+      <!-- Our pyramid will go inside here -->
+      <div id="construction">
+        <p>Uh oh! the pyramid is still under construction.</p>
+        <p>Check back again soon... our developers are hard at wrk as we speak!</p>
+      </div>
+     </div>
+    <script src="mario.js"></script>    
+</div>
+
 </body>
 </html>
