добавил изменение размеров

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <h1>Pyramid Slide</h1>
 <form name="pyramid"
-oninput="heightOutput.value=parseInt(height.value)">
+oninput="heightOutput.value=parseInt(height.value);updatePyramid()">
   Brick Symbol:
 <select name = "brickSymbol" id = "brickSymbol">
          <option value="@">@</option>
