--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Pyramid Slide</h1>
-        <form name="pyramid" oninput="heightOutput.value=parseInt(height.value);printPyramid(parseInt(height.value), brickSymbol.value)">
+        <form name="pyramidSettings" oninput="heightOutput.value=parseInt(height.value);printPyramid(parseInt(height.value), brickSymbol.value)">
             Brick Symbol:
             <select name="brickSymbol" id="brickSymbol">
                 <option value="#">#</option>
@@ -27,7 +27,7 @@
             <script src="mario.js"></script>
         </div>
         <script>
-            document.forms.pyramid.oninput()
+            document.forms.pyramidSettings.oninput()
         </script>
     </body>
 </html>
