added destination parameter to printPyramid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Pyramid Slide</h1>
-        <form name="pyramidSettings" oninput="heightOutput.value=parseInt(height.value);printPyramid(parseInt(height.value), brickSymbol.value)">
+        <form name="pyramidSettings" oninput="heightOutput.value=parseInt(height.value);printPyramid(parseInt(height.value), brickSymbol.value, pyramid)">
             Brick Symbol:
             <select name="brickSymbol" id="brickSymbol">
                 <option value="#">#</option>
