исправлена рамка формы
была тонкая

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 align-items: center;
                 border: solid 2px purple;
                 border-radius: 4px;
+                overflow: hidden;
             }
 
             form {
