--- a/index.html
+++ b/index.html
@@ -1,52 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            #pyramid {
-                color: purple;
-                font-family: "Courier New", monospace;
-                line-height: 0;
-                padding: 2em;
-            }
-
-            h1 {
-                background-color: #ba63ba;
-                width: 80%;
-                height: 3em;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            body {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            #mainPage {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                border: solid 2px purple;
-                border-radius: 4px;
-                overflow: hidden;
-            }
-
-            form {
-                background-color: lightgray;
-                padding: 1em 4em;
-                display: flex;
-                align-items: center;
-            }
-
-            .control {
-                display: flex;
-                align-items: center;
-                margin: 0 1em;
-            }
-
-        </style>
+        <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
         <h1>Pyramid Slide</h1>
